<resources>
    <string name="app_name">RecyclerView-extension</string>
    <string name="multi_type_load_more">点击查看更多</string>
    <string name="multi_type_load_fail">加载失败</string>
    <string name="multi_type_load_success">加载完成</string>
    <string name="multi_type_loading">正在加载中...</string>
    <string name="multi_type_load_end">- 没有更多了哦 -</string>
    <string name="multi_type_empty">空空如也</string>
</resources>
