<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">


    <data>

        <import type="android.view.View" />

        <import type="com.prayxiang.recyclerview.extension.tools.Status" />

        <variable
            name="data"
            type="com.prayxiang.recyclerview.extension.tools.Empty" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:onClick="@{()->data.onClick()}"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/load_default"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="@{data.status!=Status.STATUS_DEFAULT?View.GONE:View.VISIBLE}">

            <TextView
                android:id="@+id/load_default_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/multi_type_load_more"
                android:textColor="#999999"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="@{data.status!=Status.STATUS_FAIL?View.GONE:View.VISIBLE}">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/multi_type_load_fail"
                android:textColor="#999999"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="@{data.status!=Status.STATUS_END?View.GONE:View.VISIBLE}">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/multi_type_load_end"
                android:textColor="#999999"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="@{data.status!=Status.STATUS_SUCCESS?View.GONE:View.VISIBLE}">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/multi_type_load_success"
                android:textColor="#999999"
                android:textSize="14sp" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/load_loading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="@{data.status!=Status.STATUS_LOADING?View.GONE:View.VISIBLE}">

            <android.support.v4.widget.ContentLoadingProgressBar
                android:id="@+id/progressWheel"
                style="@android:style/Widget.ProgressBar.Small"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center" />

            <TextView
                android:id="@+id/load_loading_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:gravity="center"
                android:text="@string/multi_type_loading"
                android:textColor="#999999"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>
</layout>

